--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 AUTH_SECRET=g7X#z@93LfYqBvT!oM2rWn$5pC*EdJ0K
 
 # Your application's base URL
-AUTH_URL=https://finsight.netlify.app
+AUTH_URL=https://9000-firebase-studio-1749051953037.cluster-axf5tvtfjjfekvhwxwkkkzsk2y.cloudworkstations.dev/
 
 # Google OAuth Credentials
 GOOGLE_CLIENT_ID=102653996571-ssu0v24ngtmkfclcicv2svjppi285dbh.apps.googleusercontent.com
