Access blocked: This app’s request is invalid

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 AUTH_SECRET=g7X#z@93LfYqBvT!oM2rWn$5pC*EdJ0K
 
 # Your application's base URL
-AUTH_URL=https://finsight27.netlify.app
+AUTH_URL=https://localhost:9002
 
 # Google OAuth Credentials
 GOOGLE_CLIENT_ID=102653996571-ssu0v24ngtmkfclcicv2svjppi285dbh.apps.googleusercontent.com
